# agents

./: .gitignore  README.md  pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_extra.ipynb
1_foundations/twin/: app.py  context.py  summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/code/: orders.py
2_openai/deep_research/: README.md  app.py  email_agent.py  messenger.py  planner_agent.py  requirements.txt  research_manager.py  search_agent.py  simple.py  styles.py  writer_agent.py
3_crewai/: README.md
3_crewai/community_contributions/advanced-engineering-team/: .env.example  .gitignore  README.md  pyproject.toml
3_crewai/community_contributions/advanced-engineering-team/src/advanced_engineering_team/: __init__.py  crew.py  main.py
3_crewai/community_contributions/advanced-engineering-team/src/advanced_engineering_team/config/: agents.yaml  tasks.yaml
3_crewai/community_contributions/advanced-engineering-team/src/advanced_engineering_team/llm/: __init__.py  config.py  factory.py
3_crewai/community_contributions/advanced-engineering-team/src/advanced_engineering_team/tools/: __init__.py  docker_executor.py
3_crewai/reference/researcher/: pyproject.toml  report.md
3_crewai/reference/researcher/src/researcher/: crew.py  main.py
3_crewai/reference/researcher/src/researcher/config/: agents.yaml
4_langchain_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  app.py  sidekick.py  sidekick_tools.py  slide_kit.py  styles.py
5_agent_frameworks/1_google_adk_a2a/: SWAP_AI.md  lab.ipynb  quiet.py  worker.py
5_agent_frameworks/2_strands_pydantic/: SWAP_AI.md  board.py  pydantic_lab.ipynb  pydantic_worker.py  strands_lab.ipynb  strands_worker.py
5_agent_frameworks/3_maf_agno/: SWAP_AI.md  agno_lab.ipynb  agno_worker.py  maf_lab.ipynb  maf_worker.py
5_agent_frameworks/4_mastra/: SWAP_AI.md  board.ts  env.ts  lab.md  package-lock.json  package.json  step1.ts  step2.ts  step3.ts  step4.ts  step5.ts  tools.ts  tsconfig.json  worker.ts
6_mcp/: 2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb
community_contributions/: README.md  linkedin-post-draft.md
guides/: 09_ai_apis_and_ollama.ipynb
setup/: SETUP-PC.md  SETUP-linux.md  SETUP-mac.md  SETUP-node.md  troubleshooting.ipynb
(+134 files in other folders)
