[project]
name = "agents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-core>=1.8.1",
    "agent-framework-openai>=1.8.1",
    "agno[mcp]>=2.6.14",
    "deepagents>=0.6.8",
    "fastapi>=0.136.1",
    "google-adk[a2a,mcp]>=2.2.0",
    "gradio>=6.14.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "massive>=2.8.0",
    "openai>=2.34.0",
    "openai-agents[viz]>=0.15.1",
    "plotly>=6.8.0",
    "pydantic>=2.13.3",
    "pydantic-ai-slim[mcp,openai]>=1.107.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "strands-agents[openai]>=1.43.0",
    "uvicorn[standard]>=0.46.0",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "nbclient>=0.11.0",
    "nbconvert>=7.17.1",
]
